Fixed up navbar in view_timer.html, and deleted timer-ctr class in style.css, had a fixed width which messed with formatting of page on smaller screens.

--- a/flask_app/static/css/custom/style.css
+++ b/flask_app/static/css/custom/style.css
@@ -5,15 +5,16 @@
 }
 
 /* Timer Stylings */
-.timer-ctr {
-    width: 500px;
-}
+
 .timer-ctr > * {
     margin: 10px;
     padding: 10px;
 }
 #countdown {
     font-size: 6rem;
+}
+#victory {
+    width: 80%;
 }
 .play-btn {
     margin: 10px;
